--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do App</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <h1>To-Do List</h1>
         <input type="text" class="todo-input" placeholder="Add a new task">
+        <button class="todo-button">+</button>
         <div class="todo-item">
             <input type="checkbox">
             <label>Task 1</label>
@@ -21,6 +25,18 @@
         <div class="todo-item">
             <input type="checkbox">
             <label>Task 3</label>
+        </div>
+        <div class="todo-item">
+            <input type="checkbox">
+            <label>Task 4</label>
+        </div>
+        <div class="todo-item">
+            <input type="checkbox">
+            <label>Task 5</label>
+        </div>
+        <div class="todo-item">
+            <input type="checkbox">
+            <label>Task 6</label>
         </div>
     </div>
 </body>
