--- a/index.html
+++ b/index.html
@@ -12,32 +12,35 @@
 <body>
     <div class="container">
         <h1>To-Do List</h1>
-        <input type="text" class="todo-input" placeholder="Add a new task">
-        <button class="todo-button">+</button>
-        <div class="todo-item">
-            <input type="checkbox">
-            <label>Task 1</label>
+        <div class="input">
+            <input type="text" class="todo-input" placeholder="Add a new task">
+            <button class="btnAdd">+</button>
         </div>
-        <div class="todo-item">
-            <input type="checkbox">
-            <label>Task 2</label>
-        </div>
-        <div class="todo-item">
-            <input type="checkbox">
-            <label>Task 3</label>
-        </div>
-        <div class="todo-item">
-            <input type="checkbox">
-            <label>Task 4</label>
-        </div>
-        <div class="todo-item">
-            <input type="checkbox">
-            <label>Task 5</label>
-        </div>
-        <div class="todo-item">
-            <input type="checkbox">
-            <label>Task 6</label>
+        <ul class="scrollList">
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>5</li>
+            <li>6</li>
+            <li>7</li>
+            <li>8</li>
+            <li>9</li>
+            <li>10</li>
+            <li>11</li>
+            <li>12</li>
+            <li>13</li>
+            <li>14</li>
+            <li>15</li>
+        </ul>
+        <div class="listCounter">
+            <hr>
+            <div class="countContainer">
+                <p class="counterPg">Tasks: <span id="taskCounter">0</span></p>
+                <button class="btnDel">Delete All</button>
+            </div>
         </div>
     </div>
+    
 </body>
 </html>
