--- a/index.html
+++ b/index.html
@@ -13,25 +13,11 @@
     <div class="container">
         <h1>To-Do List</h1>
         <div class="input">
-            <input type="text" class="todo-input" placeholder="Add a new task">
+            <input type="text" class="todoInput" placeholder="Add a new task">
             <button class="btnAdd">+</button>
         </div>
         <ul class="scrollList">
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
-            <li>5</li>
-            <li>6</li>
-            <li>7</li>
-            <li>8</li>
-            <li>9</li>
-            <li>10</li>
-            <li>11</li>
-            <li>12</li>
-            <li>13</li>
-            <li>14</li>
-            <li>15</li>
+            <li id="todoList"></li>
         </ul>
         <div class="listCounter">
             <hr>
