added javascript to save task to storage and display to list

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <script src="./script.js" defer></script>
 </head>
 <body>
     <div class="container">
         <h1>To-Do List</h1>
         <div class="input">
-            <input type="text" class="todoInput" placeholder="Add a new task">
+            <input type="text" class="todoInput" id="tdInput" placeholder="Add a new task">
             <button class="btnAdd">+</button>
         </div>
         <ul class="scrollList">
