--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do App</title>
-    <link rel="stylesheet" href="style.css">
+    <link id="style-light"rel="stylesheet" href="style.css">
+    <link id="style-dark" disabled rel="stylesheet" href="style-dark.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <script src="./script.js" defer></script>
+    <script src="./theme.js" defer></script>
 </head>
 <body>
+
     <div class="container">
         <h1>To-Do List</h1>
         <div class="input">
@@ -28,6 +31,7 @@
             </div>
         </div>
     </div>
+    <div class="contrast"><a href="#" onclick="theme_toggle(); return false;">&#127763;</a>
     
 </body>
 </html>
